# fakemail-cli

./: Cargo.toml  LICENSE  README.md
src/: client.rs  commands.rs  html.rs  main.rs  repl.rs
